--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 1em;
     justify-content: space-between;
+    width: 100%;
 }
 
 .nav-title {
@@ -66,9 +67,14 @@ body {
     border-bottom: 2px solid #000; /* 마우스 호버 시 검은색 밑줄이 생기도록 설정합니다. */
 }
 
-.main {
+.nav-container {
+    max-width: 1000px; /* content의 max-width와 동일하게 설정합니다. */
+    margin: auto; /* 중앙 정렬 */
+}
+
+.content {
     padding: 20px;
-    max-width: 800px;
+    max-width: 1000px;
     margin: auto;
 }
 
@@ -112,29 +118,26 @@ ul li:not(:last-child) {
     margin-bottom: 1em;
 }
 
-.social-icons {
-    text-align: center;
-    font-size: 1.5em;
-    margin-top: 2em;
+.footer-content {
+    flex-direction: column; /* 요소들을 세로로 정렬합니다. */
+    text-align: center; /* 텍스트를 가운데로 정렬합니다. */
+    padding: 1rem;
+}
+
+.footer-text {
+    font-style: italic; /* 이탤릭체로 설정 */
+    margin-top: 1rem; /* 소셜 아이콘과의 간격을 조정합니다. */
+    font-size: small;
 }
 
 .social-icons a {
+    color: #333; /* 아이콘 기본 색상 */
     margin: 0 10px;
-    color: #333333;
+    font-size: 2.3em; /* 아이콘 크기를 키웁니다. */
 }
 
 .social-icons a:hover {
-    color: #000000;
-}
-
-.footer {
-    background-color: #ffffff;
-    text-align: center;
-    padding: 1em;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    color: #000; /* 마우스 호버 시 아이콘 색상 */
 }
 
 /* 반응형 디자인을 위한 미디어 쿼리 */
