--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,63 @@ ul li:not(:last-child) {
     margin-bottom: 1em;
 }
 
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Spacing between badges */
+    margin-bottom: 20px; /* Spacing below the entire section */
+}
+
+.badge {
+    display: inline-block;
+    padding: 5px 15px; /* Badge padding */
+    font-size: 0.85em; /* Badge font size */
+    border-radius: 20px; /* Rounded corners */
+    background-color: #E1E1E1; /* Badge background color */
+    color: #333; /* Badge text color */
+    
+}
+
+.experience-section {
+    margin-bottom: 2em;
+}
+
+.experience-item {
+    margin-bottom: 1.5em;
+}
+
+.experience-header h3 {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+}
+
+.experience-header a {
+    color: #333;
+    text-decoration: none;
+    font-size: 1em;
+}
+
+.experience-header p {
+    font-size: 0.9em;
+    color: #666;
+    margin-bottom: 0.5em;
+}
+
+.experience-item ul {
+    list-style: inside square;
+}
+
+.experience-item li {
+    margin-bottom: 0.5em;
+    font-size: 0.9em;
+    color: #333;
+}
+
+
+
+
+
 .footer-content {
     flex-direction: column; /* 요소들을 세로로 정렬합니다. */
     text-align: center; /* 텍스트를 가운데로 정렬합니다. */
