Update index.html, styles.css, and images

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,16 @@ body {
     margin: auto; /* 중앙 정렬 */
 }
 
+#about-me,
+#tech,
+#experience,
+#education,
+#projects {
+    border-bottom: 2px solid black; /* 검정색 밑줄 추가 */
+    padding-bottom: 10px; /* 밑줄과 텍스트 사이의 간격을 조정 */
+    display: inline-block; /* 밑줄이 텍스트 길이에 맞춰지도록 설정 */
+}
+
 .content {
     padding: 20px;
     max-width: 1000px;
@@ -171,27 +181,33 @@ ul li:not(:last-child) {
     color: #333;
 }
 
-.projects-section {
-    margin-bottom: 2em;
-}
-
 .project-item {
-    margin-bottom: 1.5em;
+    display: flex;
+    align-items: center;
+    margin-bottom: 2em; /* Adjust as needed */
 }
 
-.project-item h2 {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 0.5em;
+.project-image-left,
+.project-image-right {
+    width: 50%; /* Adjust as needed */
+    height: auto;
+    border-radius: 1%;
 }
 
-.project-item p {
-    font-size: 0.9em;
-    color: #333;
-    margin-bottom: 1em;
-    text-align: justify; /* 텍스트를 양쪽 정렬로 표시합니다. */
+.project-description-right,
+.project-description-left {
+    width: 50%; /* Adjust as needed */
+    padding: 0 20px; /* Adjust as needed */
 }
 
+/* Use :nth-child or a specific class to alternate the layout */
+.project-item:nth-child(odd) .project-description-right {
+    text-align: right;
+}
+
+.project-item:nth-child(even) .project-description-left {
+    text-align: left;
+}
 
 
 .footer-content {
@@ -239,10 +255,20 @@ ul li:not(:last-child) {
     .content h1 {
         font-size: 1.2em;
     }
-}
 
-@media (max-width: 768px) {
+    .project-item {
+        flex-direction: column;
+    }
+    .project-image-left,
+    .project-image-right,
+    .project-description-right,
+    .project-description-left {
+        width: 100%;
+        text-align: center;
+    }
+    
     .nav-container h2 {
         display: inline-block; /* 모바일 화면에서 h2를 인라인 블록으로 표시 */
     }
 }
+
